test/fail/Interaction-and-input-file.agda
module Interaction-and-input-file where
